# aafrag_gammapy

./: LICENSE  README.md  pyproject.toml  tox.ini
aafrag_gammapy/: kernel.py  models.py
aafrag_gammapy/tests/: conftest.py  test_kernel_cache.py  test_kernel_convolution.py  test_kernel_species.py  test_kernel_units.py  test_model_evaluate.py  test_model_fit.py  test_model_parameters.py  test_model_serialization.py  test_model_species.py  test_smoke.py
notebooks/validation/: 01_aafrag_reference_check.ipynb  02_naima_pion_decay_crosscheck.ipynb  03_multi_species_composition_validation.ipynb  04_neutrino_flavor_consistency.ipynb  05_gammapy_fit_recovery.ipynb  06_performance_benchmark.ipynb
