[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aafrag-gammapy"
version = "0.1.0.dev0"
description = "gammapy SpectralModel wrappers around aafragpy (AAfrag hadronic interaction tables)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Régis Terrier" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "aafragpy",
    "gammapy",
    "astropy",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["aafrag_gammapy*"]

[tool.pytest.ini_options]
testpaths = ["aafrag_gammapy/tests"]
