[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aafrag-gammapy"
version = "0.1.0.dev0"
description = "gammapy SpectralModel wrappers around aafragpy (AAfrag hadronic interaction tables)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Régis Terrier" }]
requires-python = ">=3.10"
dependencies = [
    # numpy<2.4 pinned: aafragpy 1.14.4's open_data_files does float() on a
    # non-0-d array, which is a hard TypeError under numpy>=2.4 (was only a
    # DeprecationWarning before) -- see DECISIONS.md ADR-016. Not our bug to
    # patch (never vendor/patch aafragpy); revisit once aafragpy fixes it upstream.
    "numpy<2.4",
    "aafragpy",
    "gammapy",
    "astropy",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["aafrag_gammapy*"]

[tool.pytest.ini_options]
testpaths = ["aafrag_gammapy/tests"]
