[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aafrag-gammapy"
version = "0.1.0.dev0"
description = "gammapy SpectralModel wrappers around aafragpy (AAfrag hadronic interaction tables)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Régis Terrier" }]
requires-python = ">=3.10"
dependencies = [
    # numpy<2.4 pinned: aafragpy 1.14.4's open_data_files does float() on a
    # non-0-d array, which is a hard TypeError under numpy>=2.4 (was only a
    # DeprecationWarning before) -- see DECISIONS.md ADR-016. Not our bug to
    # patch (never vendor/patch aafragpy); revisit once aafragpy fixes it upstream.
    "numpy<2.4",
    "aafragpy",
    "gammapy",
    "astropy",
    # regions<0.12 pinned: gammapy 2.1 imports
    # regions._utils.wcs_helpers.pixel_scale_angle_at_skycoord, which regions 0.12
    # removed/relocated -- gammapy 2.1 itself doesn't pin an upper bound, so an
    # unconstrained install pulls a regions that breaks `import gammapy` outright.
    # See DECISIONS.md ADR-017. Not our bug to patch; revisit once gammapy pins
    # this itself or regions restores the symbol.
    "regions<0.12",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["aafrag_gammapy*"]

[tool.pytest.ini_options]
testpaths = ["aafrag_gammapy/tests"]
